discussion/kv_engine/127192/127192_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

PiTR WIP

Change-Id: I9be45b72e7a7bd3d73bca5b46df21f44a67d97dc

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-05-04 08:56:39.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-05-04 09:21:09.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27944/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\magma-kvstore\magma-kvstore.cc(1201): error C2061: syntax error: identifier "book" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27944/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23908/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1201:9:
error: unknown type name "book"; did you mean "bool"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23908/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2073/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1201:9: error: unknown type name "book"; did you mean "bool"? [clang-diagnostic-error]
        book unused) {
        ^~~~
        bool

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2073/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1201:9:
error: unknown type name "book"; did you mean "bool"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2073/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2581/ : FAILURE

Compile error at [2020-05-04T08:59:44.108Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1201:9:
error: unknown type name "book"; did you mean "bool"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2581/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3498/ : FAILURE

Failure of a CTest test [2020-05-04T09:07:38.446Z] 386/392 Test #389: cluster_test ......................................................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3498/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3523/ : FAILURE

Compile error at [2020-05-04T09:08:04.299Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1201:9:
error: ?book? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3523/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3579/ : FAILURE

Compile error at [2020-05-04T09:05:55.655Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1201:9:
error: ?book? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3579/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11368/ : FAILURE

Compile error at [2020-05-04T09:07:32.353Z] ../kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:1201:9:
error: ?book? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11368/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/591/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
